syntax = "proto3";

package vanti.bsp.ew;

option go_package = "github.com/vanti-dev/sc-bos/pkg/gen";

service NodeApi {
  rpc GetNodeRegistration(GetNodeRegistrationRequest) returns (NodeRegistration) {}
  rpc CreateNodeRegistration(CreateNodeRegistrationRequest) returns (NodeRegistration) {}
  rpc ListNodeRegistrations(ListNodeRegistrationsRequest) returns (ListNodeRegistrationsResponse) {}

  rpc TestNodeCommunication(TestNodeCommunicationRequest) returns (TestNodeCommunicationResponse) {}
}

message NodeRegistration {
  string name = 1;
  string address = 2;
  string description = 4;
}

message GetNodeRegistrationRequest {
  string node_name = 1;
}

message CreateNodeRegistrationRequest {
  NodeRegistration node_registration = 1;
}

message ListNodeRegistrationsRequest {

}

message ListNodeRegistrationsResponse {
  repeated NodeRegistration node_registrations = 1;
}

message TestNodeCommunicationRequest {
  string node_name = 1;
}

message TestNodeCommunicationResponse {
  repeated string services = 1;
}